Widget overhaul + other refactorings.

--- a/app/assets/stylesheets/_ie7_and_ie8.sass
+++ b/app/assets/stylesheets/_ie7_and_ie8.sass
@@ -32,7 +32,7 @@
   display: none
 
 .widget tbody tr.last-child td,
-.widget_menu ul li.last-child
+.widget .menu ul li.last-child
   border-bottom: 0
 
 #modal_window
@@ -45,5 +45,5 @@
   background: image-url("modal_overlay_ie7_ie8.png")
 
 #menu_chapter .li_active a
-  background: 
+  background:
     color: #333
