--- a/app/assets/stylesheets/_subscriptions.sass
+++ b/app/assets/stylesheets/_subscriptions.sass
@@ -1,8 +1,9 @@
 #subscriptions-edit
-  h3
-    font-size: 18px
-  h4
-    font-size: 15px
+  article
+    h3
+      font-size: 18px
+    h4
+      font-size: 15px
 
   ul.settings
     border-top: 1px solid #ccc
@@ -89,6 +90,9 @@
 
     #add_accountability_partner
       width: 300px
+
+
+
 
 #subscriptions-edit.mobile-client
 
