--- a/app/views/references/invalid_ref.html.haml
+++ b/app/views/references/invalid_ref.html.haml
@@ -18,7 +18,7 @@
   = link_to(reference.human, 'javascript:void(0);')
 
 - content_for :sidebar do
-  = render "shared/widget_ad_bible_app"
+  = render "widgets/download_app"
 
 %article
   %div#invalid_chapter{style:"text-align: center; margin-top:70px"}
