--- a/app/views/sidebars/subscriptions/_display.html.haml
+++ b/app/views/sidebars/subscriptions/_display.html.haml
@@ -12,5 +12,5 @@
         %a.close_btn.subscription_close_btn
   #sb-subscription
     .ajax_me{"data-ajax" => url}
-      .widget.widget-notice.widget_last_fixed{style: "width:268px;"}
+      .widget.widget-notice{style: "width:268px;"}
         %p= t("plans.loading sidebar content")
