--- a/app/views/sidebars/versions/_show.html.haml
+++ b/app/views/sidebars/versions/_show.html.haml
@@ -3,16 +3,15 @@
 - version = presenter.version
 - related = presenter.related
 
-.widget.sticky.gutter_bottom_half
+.widget-button
   = link_to t("versions.read title"), bible_path((last_read || default_reference).merge(version: version)), class: 'action_button_blue'
 
 - if version.publisher.name.present? || version.publisher.id.blank?
   - pub_name = version.publisher.name || t('versions.public domain')
   .widget
-    %header
-      %span
-        =t("versions.publisher widget title")
-    %ul.widget_menu
+    %h3.hd
+      =t("versions.publisher widget title")
+    %ul.menu
       %li
         - if version.publisher.url.present?
           = link_to pub_name, version.publisher.url
@@ -21,10 +20,9 @@
 
 - if related.present?
   .widget
-    %header
-      %span
-        =t("versions.other versions")
-    %ul.widget_menu
+    %h3.hd
+      =t("versions.other versions")
+    %ul.menu
       - related.each do |v|
         %li
           = link_to v, v
