--- a/app/views/users/confirm_email.html.haml
+++ b/app/views/users/confirm_email.html.haml
@@ -1,7 +1,7 @@
 - @main_nav = false
 
 - content_for :sidebar do
-  = render partial: "shared/widget_ad_bible_app"
+  = render partial: "widgets/download_app"
 
 %article
   %h1.keep= t("users.thanks for registering")
