--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -3,10 +3,8 @@
 - unless content_for?(:sidebar)
   - content_for :sidebar do
     - if @me
-      = render "shared/widget_profile_settings" unless [:recent_activity, :bookmarks, :notes].find{|rsrc| rsrc == @selected}
-    = render "shared/widget_user_badges" unless @user.badges.empty?
-
-
+      = render partial: "widgets/settings" unless [:recent_activity, :bookmarks, :notes].find{|rsrc| rsrc == @selected}
+    = render partial: "widgets/badges" unless @user.badges.empty?
 
 - if @me
   - content_for :mobile_right_nav do
@@ -14,8 +12,41 @@
 
 - content_for :main do
 
-  = render partial: "users/user_info", locals: {user: @user, me: @me} unless @me
-  = render partial: "users/user_tabs", locals: {selected: @selected} unless @me
+  - unless @me
+
+    %section.top_section.clearfix
+      .profile_header
+        %img.avatar_huge{src: @user.user_avatar_url["px_128x128"]}
+
+        - if @me
+          %form{action: edit_user_path(@user)}
+            %button.float_right= t("users.profile.edit")
+        %h1= @user.name || @user.username
+
+      .profile_info
+        %ul.float_left
+          - if @user.name
+            %li.icon_small_user= @user.username
+          - if @user.location
+            %li.icon_small_location= @user.location
+          - if @user.website
+            %li.icon_small_link= link_to @user.website_human, @user.website_url
+          - if @user.bio
+            %li.icon_small_about= @user.bio
+
+    %ul.header_tabs
+      %li.activity{class: ("highlighted" if @selected == :recent_activity)}
+        %a{href: user_path(@user)}
+          %span= t('users.recent activity')
+      %li.notes{class: ("highlighted" if @selected == :notes)}
+        %a{href: user_notes_path(@user)}
+          %span= t('notes title')
+      %li.bookmarks{class: ("highlighted" if @selected == :bookmarks)}
+        %a{href: user_bookmarks_path(@user)}
+          %span= t('bookmarks.title')
+      %li.badges{class: ("highlighted" if @selected == :badges)}
+        %a{href: user_badges_path(@user)}
+          %span= t('badges title')
 
   %article.profile
     - if @me
