--- a/app/views/sidebars/notes/_index.html.haml
+++ b/app/views/sidebars/notes/_index.html.haml
@@ -1,5 +1,5 @@
-.widget.gutter_bottom_half
+.widget-button
   %a.action_button_green{href: current_auth ? new_note_path : sign_up_path(source: "note", redirect: "/notes/new")}
     %span.icon_plus= t('new note')
 
-  = render '/shared/widget_ad_bible_app'
+= render 'widgets/download_app'
