--- a/app/views/sidebars/plans/_publisher.html.haml
+++ b/app/views/sidebars/plans/_publisher.html.haml
@@ -2,12 +2,10 @@
 // plan - instance of Plan
 
 .widget
-  %header
-    %span
-      =t("plans.publisher")
-  %ul.widget_menu
-    %li
-      %p= plan.copyright
-    - unless plan.publisher_url.nil?
-      %li
-        = link_to(t("plans.about publisher"), plan.publisher_url)
+  %h3.hd
+    =t("plans.publisher")
+  %div.bd
+    %p= plan.copyright
+  - unless plan.publisher_url.nil?
+    %div.ft.link
+      = link_to(t("plans.about publisher"), plan.publisher_url)
