--- a/app/views/sidebars/subscriptions/_progress.html.haml
+++ b/app/views/sidebars/subscriptions/_progress.html.haml
@@ -2,13 +2,13 @@
 // presenter: Presenter::Sidebar::SubscriptionProgress
 - subscription = presenter.subscription
 
-.widget
+.widget-button
   = link_to(t('plans.read today'), user_subscription_path(current_user,subscription), class: 'action_button_green', style: "margin-bottom: 10px")
 
 .widget
-  %header
-    %span= subscription.name
-  %ul.widget_menu
+  %h3.hd
+    = subscription.name
+  %ul.menu
     %li
       =render :partial => "progress", :locals => {subscription: subscription}
     %li
