--- a/app/views/sidebars/users/_new.html.haml
+++ b/app/views/sidebars/users/_new.html.haml
@@ -1,16 +1,15 @@
 // Local parameters
 // presenter: Presenter::Sidebar::UsersNew
 
-.widget.sign_in
-  %aside.sign_in
-    %p
-      %b= t("have an account")
-      %span.float_right{style: "margin-left: 10px; margin-top: 3px"}= link_to t("sign in"), sign_in_path(redirect: params[:redirect], source: params[:source])
+.widget.simple
+  %div.bd
+    %h3
+      = t("have an account")
+      %em= link_to t("sign in"), sign_in_path(redirect: params[:redirect], source: params[:source])
 
-.widget.account_benefits
-  %header
-    %span
-      =t("registration.benefits title")
-  %ul.widget_menu
-    %li
-      %p= t("registration.benefits blurb")
+
+.widget.simple
+  %h3.hd
+    =t("registration.benefits title")
+  %div.bd
+    %p= t("registration.benefits blurb")
