--- a/app/views/users/confirm.html.haml
+++ b/app/views/users/confirm.html.haml
@@ -1,7 +1,7 @@
 - @main_nav = false
 
 - content_for :sidebar do
-  = render "shared/widget_ad_bible_app"
+  = render "widgets/download_app"
 
 %article
   -if @user.try(:errors) && @user.errors.any?
