--- a/app/views/shared/_modal_single_verse.html.haml
+++ b/app/views/shared/_modal_single_verse.html.haml
@@ -7,7 +7,7 @@
     js = d.createElement(s); js.id = id;
     js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=105030176203924";
     fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));</script>
+  }(document, 'script', 'facebook-jssdk'));
 
 #modal_single_verse.modal{itemscope: true, itemtype: 'http://schema.org/Article'}
   #modal_overlay.overlay &nbsp;
